hphp/test/quick/parse_fail_type_constraint.php
<?hh

// non newtypes can't have constraints
type Foo as int = int; // error
